Commit before Cleaning and Media

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 </head>
 
-<body onload="loadPokemonList()">
+<body onload="init()">
     <nav class="header__container">
         <!-- Logo & Name-->
         <div class="logo__wrapper" onclick="window.location.reload()">
