1st Stage Cleaning

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href ="style_card_and_stats.css">
     <link rel="stylesheet" href="style_media.css">
     <script src="script.js"></script>
     <script src="script_templates.js"></script>
@@ -19,30 +20,26 @@
 </head>
 
 <body onload="init()">
+    <!-- Header & Search  Area-->
     <nav class="header__container">
         <!-- Logo & Name-->
         <div class="logo__wrapper" onclick="window.location.reload()">
             <img src="./img/icon_pokemon.png">
-            <img src ="./img/logo.png">
+            <img src="./img/logo.png">
         </div>
         <!-- Search area -->
         <div class="search__wrapper">
-            <input id="search__input--id" type="search" placeholder="Search pokemon ..." onkeyup="searchPokemon(event)" onclick="clearSearch(event)">
+            <input id="search__input--id" type="search" placeholder="Search pokemon ..." onkeyup="searchPokemon(event)"
+                onclick="clearSearch(event)">
         </div>
     </nav>
     <!-- Pokemon Cards Area -->
     <main id="cards__wrapper" class="cards__wrapper">
-
     </main>
     <!-- Base stats Area -->
     <div id="stats__wrapper" class="stats__wrapper d-none">
         <div id="stats__container" class="stats__container"></div>
     </div>
-
-    <footer>
-
-    </footer>
-
 </body>
 
 </html>
