--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href ="style_card_and_stats.css">
     <link rel="stylesheet" href="style_media.css">
     <script src="script.js"></script>
-    <script src="script_templates.js"></script>
+    <script src="script_pokemon_wrapper.js"></script>
     <script src="script_card_and_stats.js"></script>
+    <script src="script_templates.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="icon" href="./img/icon_pokemon.png">
