--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         </div>
     </nav>
     <!-- Pokemon Cards Area -->
-    <main id="cards__wrapper" class="cards__wrapper">
+    <main id="cards__wrapper" class="cards__wrapper" >
     </main>
     <!-- Base stats Area -->
-    <div id="stats__wrapper" class="stats__wrapper d-none">
+    <div id="stats__wrapper" class="stats__wrapper d-none" onclick="closeStats()">
         <div id="stats__container" class="stats__container"></div>
     </div>
 </body>
