--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href ="style_card_and_stats.css">
+    <link rel="stylesheet" href="style_card_and_stats.css">
     <link rel="stylesheet" href="style_media.css">
     <script src="script.js"></script>
     <script src="script_pokemon_wrapper.js"></script>
@@ -35,7 +35,14 @@
         </div>
     </nav>
     <!-- Pokemon Cards Area -->
-    <main id="cards__wrapper" class="cards__wrapper" >
+    <main id="cards__wrapper" class="cards__wrapper">
+        <div class="cards_loading-animation" id="cards_loading-animation">
+            <div class="loader">
+                <div class="inner one"></div>
+                <div class="inner two"></div>
+                <div class="inner three"></div>
+            </div>
+        </div>
     </main>
     <!-- Base stats Area -->
     <div id="stats__wrapper" class="stats__wrapper d-none" onclick="closeStats()">
